syntax = "proto3";

package rapid.public_api.v1;

import "protoc-gen-openapiv2/options/annotations.proto";
import "rapid/model/v1/tenant.proto";

message PublicGetTenantRequest {
  string tenant_id = 1;

  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: ["tenant_id"]
    }
  };
}

message PublicGetTenantResponse {
  model.v1.Tenant tenant = 1;

  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: ["tenant"]
    }
  };
}
